<resources>
    <string name="app_name">Shoe Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_through_the_list_you_will_get_an_image_and_details_when_clicked">You can go through the list and you will get the details when clicked.</string>
    <string name="shoe_list">Shoe List</string>
    <string name="find_any_type_of_shoe_you_want">Add any type of shoe you want</string>
    <string name="add_button_to_add_new_item">add button to add new item</string>
    <string name="store_image">store image</string>
    <string name="we_are_happy_to_see_you_here">We are happy to see you here</string>
    <string name="instruction">Instruction</string>
    <string name="title">Title:</string>
    <string name="price">Price:</string>
    <string name="textview">TextView</string>
    <string name="company">Company:</string>
    <string name="sex">Sex:</string>
    <string name="description">Description:</string>
    <string name="please_enter_details">Please Enter Details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="shoe_collection">shoe collection</string>
    <string name="we_have_go_an_easy_deign_to_add_new_item_in_order_to_add_a_new_item_you_ll_need_to_enter_all_the_details_like_title_description_price_company_and_sex">We have go an easy deign to add new item. In order to add a new item, you\'ll need to enter all the details like- title, description, price, company and sex.</string>
    <string name="add_new_shoe">Add new shoe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="no_items_to_display">No Items to Display</string>
</resources>