<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".AddShoeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/add_new_shoe"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="22sp"
                android:hint="@string/title"
                android:background="@drawable/et_style"
                android:padding="8dp"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:textColor="#000000"
                android:textSize="22sp"
                android:hint="@string/price"
                android:background="@drawable/et_style"
                android:padding="8dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="22sp"
                android:importantForAutofill="no"
                android:hint="@string/company"
                android:background="@drawable/et_style"
                android:padding="8dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="22sp"
                android:hint="@string/sex"
                android:background="@drawable/et_style"
                android:padding="8dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#000000"
                android:textSize="20sp"
                android:hint="@string/description"
                android:background="@drawable/et_style"
                android:padding="8dp"
                android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textSize="20sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel"
            android:textSize="20sp"
            app:cornerRadius="10dp" />
    </LinearLayout>
</ScrollView>