<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_any_type_of_shoe_you_want"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:src="@drawable/shoescollection"
            android:contentDescription="@string/shoe_collection" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_have_go_an_easy_deign_to_add_new_item_in_order_to_add_a_new_item_you_ll_need_to_enter_all_the_details_like_title_description_price_company_and_sex"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/go_through_the_list_you_will_get_an_image_and_details_when_clicked"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shoe_list" />

    </LinearLayout>
</ScrollView>